some changes to make ready for final publish, but a problem exists.